--- a/LeNet/lenet.ipynb
+++ b/LeNet/lenet.ipynb
@@ -24,19 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch \n",
     "from torch import nn\n",
     "from torchvision import datasets\n",
-    "import torchvision"
+    "import torchvision\n",
+    "from torchinfo import summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +65,52 @@
     "\n",
     "        return x\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "LeNet                                    [10]                      --\n",
+       "├─Conv2d: 1-1                            [6, 28, 28]               156\n",
+       "├─Tanh: 1-2                              [6, 28, 28]               --\n",
+       "├─AvgPool2d: 1-3                         [6, 14, 14]               --\n",
+       "├─Conv2d: 1-4                            [16, 10, 10]              2,416\n",
+       "├─Tanh: 1-5                              [16, 10, 10]              --\n",
+       "├─AvgPool2d: 1-6                         [16, 5, 5]                --\n",
+       "├─Conv2d: 1-7                            [120, 1, 1]               48,120\n",
+       "├─Tanh: 1-8                              [120, 1, 1]               --\n",
+       "├─Linear: 1-9                            [84]                      10,164\n",
+       "├─Tanh: 1-10                             [84]                      --\n",
+       "├─Linear: 1-11                           [10]                      850\n",
+       "==========================================================================================\n",
+       "Total params: 61,706\n",
+       "Trainable params: 61,706\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (M): 7.05\n",
+       "==========================================================================================\n",
+       "Input size (MB): 0.00\n",
+       "Forward/backward pass size (MB): 0.05\n",
+       "Params size (MB): 0.25\n",
+       "Estimated Total Size (MB): 0.30\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_t = LeNet()\n",
+    "summary(model_t, input_size=[1,32,32])\n"
    ]
   },
   {
